--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -25,5 +25,43 @@
 	"Subscribe to our newsletter": "اشترك في نشرتنا الإخبارية",
 	"We care about your data in our privacy policy": "نحن نهتم ببياناتك في سياسة الخصوصية الخاصة بنا",
 	"Enter your Email": "أدخل بريدك الإلكتروني",
-	"Subscribe": "اشتراك"
+	"Subscribe": "اشتراك",
+	"ABOUT THE CLEANLINESS AMBASSADORS":"حول سفراء النظافة",
+	"Who we are":"من نحن",
+	"Our Message":"رسالتنا",
+	"What we do":"ماذا نفعل",
+	"The Cleanliness Ambassadors campaign has engaged an estimated 5,000 volunteers across 15 Iraqi governorates, making it one of the largest community-based environmental campaigns in the country.":"اشترك في حملة سفراء النظافة حوالي 5000 متطوع في 15 محافظة عراقية مما يجعلها احد اكبر الحملات في البلاد",
+	"This is a campaign from you, and for all of you, we can make a positive change, cooperate and strive for a cleaner and more beautiful Iraq":"هذه حملة منكم ولكم جميعا نستطيع إحداث تغيير إيجابي والتعاون والسعي من أجل عراق أنظف وأجمل",
+	"We empower people in communities all over the country to make a difference to their local environment. We encourage groups in every region of the country to organize activities and register with us to gain access to our planning tools and event resources.":"نقوم بتمكين الناس في المجتمعات في جميع أنحاء البلاد لإحداث فرق في بيئتهم المحلية. نشجع المجموعات في كل منطقة من البلاد على تنظيم الأنشطة والتسجيل معنا للوصول إلى أدوات التخطيط وموارد الأحداث الخاصة بنا",
+	"Events / Campaign":"الفعاليات / الحملات",
+	"Past Events":"الفعاليات السابقة",
+	"Up Comming Events":"الفعاليات القادمة",
+	"Alahrar Bridge":"جسر الاحرار",
+	"Alayima Bridge":"جسر الائمة",
+	"Bashtabya":"باشطابيا",
+	"Baghdad":"بغداد",
+	"Mosul":"الموصل",
+	"Join Us":"انضم الينا",
+	"Name":"الاسم",
+	"Age":"العمر",
+	"Phone Number":"رقم الهاتف",
+	"Telegram ID":"معرف التليجرام",
+	"Gender":"الجنس",
+	"Male":"ذكر",
+	"Female":"انثى",
+	"Occupation (Optional)":"المهنة (اختياري)",
+	"Governorate":"المحافظة",
+	"Submit":"ارسال",
+	"Campaign":"الحملة",
+	"Who are we ?":"من نحن ؟",
+	"Our Mission":"مهمتنا",
+	"About us":"حولنا",
+	"Contact":"اتصل بنا",
+	"Resources":"المصادر",
+	"Newsletter":"النشرة الإخبارية",
+	"Support":"الدعم",
+	"socials":"مواقع التواصل",
+	"Social":"مواقع التواصل",
+	"Bill Walsh leadership lessons":"Bill Walsh leadership lessons",
+	"© 2023 Iraq Clean Campaign. All rights reserved.":"حملة العراق النظيف. حقوق النشر محفوظة ©"
 }
