feat(component): adding Conatact Us page
I added Contact US page with the translation to the website

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -30,5 +30,15 @@
 	"Initiatives Card Header": "حملة تنظيف واسعة في مدينة بخديدا (الحمدانية)",
 	"Initiatives Card text": "وأضاف أن الحملة تضمنت تنظيف الساحات والطرق ، والشوارع المحيطة بالكلية وتنظيف الأرصفة وغسلها، وإزالة النفايات عنها، فضلا عن طلاءوإزالة النفايات عنها، فضلا عن طلاء الجدران الداخلية والخارجية . وأضاف أن الحملة تضمنت تنظيف الساحات والطرق ، والشوارع المحيطة بالكلية وتنظيف الأرصفة وغسلها، وإزالة النفايات عنها، فضلا عن طلاء الجدران الداخلية وإزالة النفايات عنها، فضلا عن طلاء الجدران الداخلية والخارجية ...",
 	"read More" : "أقرأ المزيد",
-	"read more about Initiatives BTN": "أقرأ المزيد عن الحملات"
+	"read more about Initiatives BTN": "أقرأ المزيد عن الحملات",
+	"Forme Header": "دعونا نرتقي بمستوى",
+	"Forme Header-br": "المدينة معاً",
+	"Forme p-tag": "يمكنك التواصل معنا في أي وقت عبر",
+	"Forme Input-Name": "الاسم",
+	"Forme PlaceHolder-Name": "أسمك",
+	"Forme Input-Email": "أيميلك",
+	"Forme Input-textarea": "كيف يمكننا المساعد ؟",
+	"Forme PlaceHolder-textarea": "...أخبرنا عن أفكارك, أسلتك",
+	"Forme Submit btn": "أرسال"
+
 }
