feat(translate): Add translate Blog page

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -25,5 +25,9 @@
 	"Subscribe to our newsletter": "اشترك في نشرتنا الإخبارية",
 	"We care about your data in our privacy policy": "نحن نهتم ببياناتك في سياسة الخصوصية الخاصة بنا",
 	"Enter your Email": "أدخل بريدك الإلكتروني",
-	"Subscribe": "اشتراك"
+	"Subscribe": "اشتراك",
+	"Recent blog posts": "مقالات المدونة الأخيرة",
+	"All blog posts": "جميع مقالات المدونة",
+	"Ahmed Khalid": "احمد خالد",
+	"Linear helps streamline software projects, sprints, tasks, and bug tracking.Here’s how to get...": "يساعد تبسيط على تبسيط مشاريع البرامج والمهام وتتبع الأخطاء. إليك كيفية الحصول على ..."
 }
