--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -25,5 +25,10 @@
 	"Subscribe to our newsletter": "Subscribe to our newsletter",
 	"We care about your data in our privacy policy": "We care about your data in our privacy policy",
 	"Enter your Email": "Enter your Email",
-	"Subscribe": "Subscribe"
+	"Subscribe": "Subscribe",
+	"Recent blog posts": "Recent blog posts",
+	"All blog posts": "All blog posts",
+	"Ahmed Khalid": "Ahmed Khalid",
+	"Linear helps streamline software projects, sprints, tasks, and bug tracking.Here’s how to get..." : "Linear helps streamline software projects, sprints, tasks, and bug tracking.Here’s how to get..."
+
 }
