fix(common.json in ar and en): fixing a bug in json files
there was a conflict in the json files  missing the "," character and deleting duplicated data

this conflict affect the whole website it should work fine now

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -39,8 +39,7 @@
 	"Forme Input-Email": "أيميلك",
 	"Forme Input-textarea": "كيف يمكننا المساعد ؟",
 	"Forme PlaceHolder-textarea": "...أخبرنا عن أفكارك, أسلتك",
-	"Forme Submit btn": "أرسال"
-	"read more about Initiatives BTN": "أقرأ المزيد عن الحملات"
+	"Forme Submit btn": "أرسال",
 	"ABOUT THE CLEANLINESS AMBASSADORS":"حول سفراء النظافة",
 	"Who we are":"من نحن",
 	"Our Message":"رسالتنا",
