--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -39,8 +39,7 @@
 	"Forme Input-Email": "Email",
 	"Forme Input-textarea": "How can we help ?",
 	"Forme PlaceHolder-textarea": "Tell u about your ideas, questions...",
-	"Forme Submit btn": "submit"
-	"read more about Initiatives BTN": "Read More About Initiatives"
+	"Forme Submit btn": "submit",
 	"ABOUT THE CLEANLINESS AMBASSADORS": "ABOUT THE CLEANLINESS AMBASSADORS",
 	"Who we are":"Who we are",
 	"Our Message":"Our Message",
