--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -39,8 +39,7 @@
 	"Forme Input-Email": "أيميلك",
 	"Forme Input-textarea": "كيف يمكننا المساعد ؟",
 	"Forme PlaceHolder-textarea": "...أخبرنا عن أفكارك, أسلتك",
-	"Forme Submit btn": "أرسال"
-	"read more about Initiatives BTN": "أقرأ المزيد عن الحملات"
+	"Forme Submit btn": "أرسال",
 	"ABOUT THE CLEANLINESS AMBASSADORS":"حول سفراء النظافة",
 	"Who we are":"من نحن",
 	"Our Message":"رسالتنا",
@@ -78,5 +77,7 @@
 	"socials":"مواقع التواصل",
 	"Social":"مواقع التواصل",
 	"Bill Walsh leadership lessons":"Bill Walsh leadership lessons",
-	"© 2023 Iraq Clean Campaign. All rights reserved.":"حملة العراق النظيف. حقوق النشر محفوظة ©"
+	"© 2023 Iraq Clean Campaign. All rights reserved.":"حملة العراق النظيف. حقوق النشر محفوظة ©",
+	"Recent blog posts":"احدث التدوينات",
+	"All blog posts":"جميع التدوينات"
 }
