perf: translate events page content

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -82,5 +82,10 @@
 	"Bill Walsh leadership lessons": "Bill Walsh leadership lessons",
 	"© 2023 Iraq Clean Campaign. All rights reserved.": "حملة العراق النظيف. حقوق النشر محفوظة ©",
 	"Recent blog posts": "احدث التدوينات",
-	"All blog posts": "جميع التدوينات"
+	"All blog posts": "جميع التدوينات",
+	"Cleaning Iraq starts with you, the choice is yours, and your hand makes the difference. Our campaigns are everywhere in Iraq. Join us and be part of the change. With your efforts and participation, we achieve the best for our country.":"تنظيف العراق يبدأ من عندك الخيار لك وبيدك تصنع الفارق. حملاتنا في كل مكان في العراق. انضم إلينا وكن جزءًا من التغيير. بجهودك ومشاركتك نحقق الأفضل لبلدنا",
+	"Thank you to everyone involved in the clean-up campaign, thanks to you we have made a huge change and made these places clean and beautiful.":"شكرًا لكل من شارك في حملة التنظيف ، بفضلكم قمنا بتغيير كبير وجعلنا هذه الأماكن نظيفة وجميلة",
+	"We can all make a positive change, and we must cooperate and strive for a cleaner and more beautiful Iraq. Register your name and be part of the family of ambassadors of cleanliness":"نستطيع جميعاً إحداث تغيير إيجابي ، وعلينا أن نتعاون ونسعى جاهدين من أجل عراق أنظف وأجمل. سجل اسمك وكن جزء من عائلة سفراء النظافة",
+	"I just went out to ask for reform.” These words carry a lot of meanings and teach us a lot, and one of the messages we learn from this is “Reform is to preserve the environment and leave it clean!":"انما خرجت لطلب الإصلاح 'هذه الكلمات تحمل الكثيرمن المعاني وتعلّمنا الكثير ، وأحد الرسائل اللي نتعلمها من هذا' الإصلاح هو أن نحافظ على البيئة ونتركها نظيفة!",
+	"Therefore, we are very happy with our participation in these large campaigns throughout Iraq, and it was an honor for us to be part of the ongoing reform with our heroic youth to preserve the environment and help spread awareness more":"لذلك نحن جداً سعيدين بمشاركتنا بهذه الحملات الكبيرة في عموم العراق وكان شرف لنا أن نكون جزء من الإصلاح المستمر مع شبابنا الأبطال حتى نحافظ على البيئة ونساعد بانتشار الوعي بشكل أكبر"
 }
