--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -78,5 +78,10 @@
 	"Bill Walsh leadership lessons":"Bill Walsh leadership lessons",
 	"© 2023 Iraq Clean Campaign. All rights reserved.":"© 2023 Iraq Clean Campaign. All rights reserved.",
 	"Recent blog posts":"Recent blog posts",
-	"All blog posts":"All blog posts"
+	"All blog posts":"All blog posts",
+	"Cleaning Iraq starts with you, the choice is yours, and your hand makes the difference. Our campaigns are everywhere in Iraq. Join us and be part of the change. With your efforts and participation, we achieve the best for our country.":"Cleaning Iraq starts with you, the choice is yours, and your hand makes the difference. Our campaigns are everywhere in Iraq. Join us and be part of the change. With your efforts and participation, we achieve the best for our country.",
+	"Thank you to everyone involved in the clean-up campaign, thanks to you we have made a huge change and made these places clean and beautiful.":"Thank you to everyone involved in the clean-up campaign, thanks to you we have made a huge change and made these places clean and beautiful.",
+	"We can all make a positive change, and we must cooperate and strive for a cleaner and more beautiful Iraq. Register your name and be part of the family of ambassadors of cleanliness":"We can all make a positive change, and we must cooperate and strive for a cleaner and more beautiful Iraq. Register your name and be part of the family of ambassadors of cleanliness",
+	"I just went out to ask for reform.” These words carry a lot of meanings and teach us a lot, and one of the messages we learn from this is “Reform is to preserve the environment and leave it clean!":"I just went out to ask for reform.” These words carry a lot of meanings and teach us a lot, and one of the messages we learn from this is “Reform is to preserve the environment and leave it clean!",
+	"Therefore, we are very happy with our participation in these large campaigns throughout Iraq, and it was an honor for us to be part of the ongoing reform with our heroic youth to preserve the environment and help spread awareness more":"Therefore, we are very happy with our participation in these large campaigns throughout Iraq, and it was an honor for us to be part of the ongoing reform with our heroic youth to preserve the environment and help spread awareness more"
 }
