feat: upgrading and enhancing the blog system using dynamic routes

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -82,5 +82,7 @@
 	"Bill Walsh leadership lessons": "Bill Walsh leadership lessons",
 	"© 2023 Iraq Clean Campaign. All rights reserved.": "حملة العراق النظيف. حقوق النشر محفوظة ©",
 	"Recent blog posts": "احدث التدوينات",
-	"All blog posts": "جميع التدوينات"
+	"All blog posts": "جميع التدوينات",
+	"Related articles": "مقالات متعلقة",
+	"Read more": "اقرأ المزيد"
 }
