style(index.tsx): adding-translation and styles

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -111,5 +111,15 @@
 	"ContactMsg": "شكرا لتواصلك معنا",
 	"thankYouMessage": "تم استلام رسالتك. نقدر اهتمامك وسوف نعاود الاتصال بك في أقرب وقت ممكن. في الوقت الحالي، تفضل بالاستمتاع بمزيد من استكشاف موقعنا. نتمنى لك يومًا سعيدًا!",
 	"Registration Successful": "تم الستجيل بنجاح",
-	"Thank you for registering for our campaign. You are now a part of our movement to make a difference. Stay tuned for updates and events!": "شكرا لك على التسجيل في حملتنا. أنت الآن جزء من حركتنا لإحداث فرق. سيتم التواصل معك في اقرب وقت لتزويدكم بتفاصيل التحديثات والأحداث!"
+	"Thank you for registering for our campaign. You are now a part of our movement to make a difference. Stay tuned for updates and events!": "شكرا لك على التسجيل في حملتنا. أنت الآن جزء من حركتنا لإحداث فرق. سيتم التواصل معك في اقرب وقت لتزويدكم بتفاصيل التحديثات والأحداث!",
+	"Murtadha name": "مرتضى التميمي",
+	"Murtadha description": "مهندس برمجيات صاحب فكرة النظافة السفراء ومدير الحملة",
+	"Mohamed name": "محمد خالد",
+	"Mohamed job": "مهندس ميكانيكي",
+	"Mohamed Responsibilities": "مسؤول عن الحملات الإعلانية",
+	"Saif name": "سيف كريم",
+	"Saif description": "مصمم UI / UX مسؤول عن العلاقات الخارجية وحسابات وسائل التواصل الاجتماعي للحملة",
+	"Hassan name": "حسان",
+	"Hassan description": "هندسة الطيران مسؤولة عن جمع الموافقات الأمنية والتصاريح وإدارة الحملة",
+	"Instagram": "أنستقرام"
 }
