--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -107,5 +107,15 @@
 	"Registration Successful": "Registration Successful",
 	"Thank you for registering for our campaign. You are now a part of our movement to make a difference. Stay tuned for updates and events!": "Thank you for registering for our campaign. You are now a part of our movement to make a difference. Stay tuned for updates and events!",
 	"ContactMsg": "Thank You for Contacting Us",
-	"thankYouMessage": "Your message has been received. We appreciate your interest and will get back to you as soon as possible. In the meantime, feel free to explore more on our website. Have a great day!"
+	"thankYouMessage": "Your message has been received. We appreciate your interest and will get back to you as soon as possible. In the meantime, feel free to explore more on our website. Have a great day!",
+	"Murtadha name": "Murtadha Al-Tameemi",
+	"Murtadha description": "Software engineer, owner of the idea of cleanliness ambassadors and campaign manager",
+	"Mohamed name": "Mohamed Khaled",
+	"Mohamed job": "mechanical engineer",
+	"Mohamed Responsibilities": "Responsible for advertising campaigns",
+	"Saif name": "Saif A Kareem",
+	"Saif description": "UI / UX designer Responsible for external relations and social media accounts for the campaign",
+	"Hassan name": "Hassan",
+	"Hassan description": "Aeronautical Engineering Responsible for collecting security approvals and permits and managing the campaign",
+	"Instagram": "Instagram"
 }
